# cpp_calculator

cpp_calc/: CMakeLists.txt  calc.cpp  calc.hpp  cpp_calc.cpp  function.cpp  function.hpp  main.cpp  parser.cpp  parser.hpp  solver.cpp  solver.hpp  token.cpp  token.hpp
cpp_calc/plugins/: cos.cpp  exp.cpp  sin.cpp  tan.cpp
